--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/types": "^2.17.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/i18n": "8.0.0-rc.11",
     "@types/node": "^20.10.4",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
