--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "HOST=0 nuxt start"
+    "start": "nuxt start"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
