--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build && nuxi build && nuxt generate",
+    "build": "nuxt build && nuxt generate && nuxt prepare && nuxi build && pnpm i --prod",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "deploy": "nuxt generate && rimraf /var/www/www-root/data/www/coin-hunter.trade/ && copyfiles -u 1 \"dist/**/*\" /var/www/www-root/data/www/coin-hunter.trade/"
   },
   "devDependencies": {
+    "@nuxt/config": "^2.17.2",
     "@nuxt/devtools": "latest",
     "@nuxt/types": "^2.17.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "8.0.0-rc.11",
+    "@nuxtjs/pwa": "^3.3.5",
     "@types/node": "^20.10.4",
     "@typescript-eslint/parser": "^6.13.2",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "nuxt": "^3.8.2",
     "nuxt-security": "1.0.0-rc.5",
+    "rimraf": "^5.0.5",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "typescript": "^5.3.3",
