--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build && nuxi build",
+    "build": "nuxt build && nuxi build && nuxt generate && nuxt prepare",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -17,9 +17,9 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "8.0.0-rc.11",
-    "@nuxtjs/pwa": "^3.3.5",
     "@types/node": "^20.10.4",
     "@typescript-eslint/parser": "^6.13.2",
+    "@vite-pwa/nuxt": "^0.4.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
