--- a/docker/site/Dockerfile
+++ b/docker/site/Dockerfile
@@ -1,18 +1,9 @@
-FROM node:20.10-slim AS dependencies
-ARG npm_cache_path=/var/tmp/.npm
-
-WORKDIR /dependencies
-
-COPY ["package.json", "package-lock.json*", "./"]
-RUN npm i --include=dev --no-audit --cache "$npm_cache_path"
-
-FROM dependencies AS build
-ARG npm_cache_path=/var/tmp/.npm
+FROM node:20.10-slim AS build
 
 WORKDIR /app
 COPY . .
 
-RUN npm i --prefer-offline --no-audit --cache "$npm_cache_path"
+RUN npm i --no-audit
 RUN npm run build
 
 FROM node:20.10-slim AS base
@@ -27,7 +18,7 @@ WORKDIR /app
 COPY --from=build /app/.output ./.output
 COPY --from=build /app/.nuxt ./.nuxt
 COPY --from=build /app/dist .
-COPY --from=dependencies /dependencies/node_modules /app/node_modules
+COPY --from=build /app/node_modules /app/node_modules
 COPY ["package.json", "package-lock.json*", "./"]
 
 ENTRYPOINT [ "/usr/bin/tini" ]
