--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "nuxt start"
   },
   "devDependencies": {
-    "@nuxt/config": "^2.17.2",
+    "@nuxt/config": "^2.17.3",
     "@nuxt/devtools": "latest",
-    "@nuxt/types": "^2.17.2",
+    "@nuxt/types": "^2.17.3",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "8.0.0-rc.11",
@@ -25,25 +25,25 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "mobile-detect": "^1.4.5",
-    "nuxt": "^3.8.2",
-    "nuxt-security": "1.0.0-rc.5",
+    "nuxt": "^3.10.1",
+    "nuxt-security": "1.1.1",
     "rimraf": "^5.0.5",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "typescript": "^5.3.3",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.3.10",
+    "vue": "^3.4.16",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.2.5",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "click-outside-vue3": "^4.0.1",
-    "gsap": "^3.12.3",
-    "next-auth": "4.22.5",
+    "gsap": "^3.12.5",
+    "next-auth": "4.24.5",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7"
   }
